--- a/backend/package.json
+++ b/backend/package.json
@@ -13,18 +13,18 @@
   "type": "module",
   "dependencies": {
     "@prisma/adapter-pg": "^7.4.1",
-    "@prisma/client": "^7.4.1",
+    "@prisma/client": "^6.19.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "pg": "^8.18.0"
+    "pg": "^8.18.0",
+    "prisma": "^6.19.2"
   },
   "devDependencies": {
     "@types/node": "^25.3.0",
     "@types/pg": "^8.16.0",
-    "nodemon": "^3.1.13",
-    "prisma": "^7.4.1"
+    "nodemon": "^3.1.13"
   }
 }
