--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,9 @@
     "prisma": "^6.19.2",
     "zod": "^4.3.6"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "devDependencies": {
     "@types/node": "^25.3.0",
     "@types/pg": "^8.16.0",
